--- a/pro.yml
+++ b/pro.yml
@@ -1,4 +1,4 @@
-name: whaledata
+name: sawaapp
 host: data.whaledata.jp
 debug: false
 secure: false
@@ -8,10 +8,10 @@ useBaseRegist: true
 elastic: http://server:9200/whale_data/
 solr: http://server:8983/solr/%s/select
 
-packageDao: com.jialu.minios.dao
-packageModel: com.jialu.minios.model
-packageResource: com.jialu.minios.resource
-packageApi: com.jialu.minios.api
+packageDao: com.github.shouaya.sawaapp.dao
+packageModel: com.github.shouaya.sawaapp.model
+packageResource: com.github.shouaya.sawaapp.resource
+packageApi: com.github.shouaya.sawaapp.api
 
 defaultUserRole: USER
 defaultAdminRole: ADMIN
