--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//resources/property.properties=UTF-8
 encoding//www/src/App.css=UTF-8
 encoding/<project>=UTF-8
 encoding/resources=UTF-8
