--- a/test.yml
+++ b/test.yml
@@ -38,9 +38,9 @@ logging:
 
 database:
   driverClass: org.postgresql.Driver
-  user: postgres
+  user: postgis
   password: whkc76s6
-  url: jdbc:postgresql://localhost:5432/app
+  url: jdbc:postgresql://192.168.11.70:5432/sawaapp
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
